# OCR-LLM-HistoricalGerman

./: .gitignore  README.md  pyproject.toml  requirements.txt
OCR_GUI/: .gitignore  README.md  app.py  helpers.py  supervised_runner.py
OCR_GUI/data/chunking_approach/: 1724666584_00000024.xml  1724666584_00000095.xml  1724666584_00000133.xml  1724666584_00000151.xml  1724666584_00000169.xml  1734305185_00000029.xml  1734305185_00000200.xml  1734305185_00000201.xml  1734305185_00000235.xml  1734305185_00000239.xml  1737359839_00000015.xml  1737359839_00000142.xml  (+473 more)
OCR_GUI/data_set_visualization/: 173736378X_00000051.xml  173736378X_00000100.xml  173736378X_00000112.xml  173736378X_00000120.xml  173738812X_00000025.xml  173738812X_00000096.xml  173738812X_00000153.xml  173738812X_00000157.xml  data_set_visualization.py
OCR_GUI/templates/: books.html  data_set_visualization.html  index.html
notebooks/Chunks_analysis/: README.md  run_analysis.ipynb  run_predictions.ipynb  threshold_detection.ipynb  visualisation_error_distribution.ipynb
notebooks/LVLMs/: lvlm_playground.ipynb
notebooks/Likelihood_analysis/: README.md  historical_char_map.json  ocr_colored_results.json  ocr_word_likelihood_analysis.ipynb  prediction.ipynb
notebooks/Supervised Approach/: README.md  batch_score_pages.py  extract_features.py  label_each_word.ipynb  rf_regressor.ipynb
src/evaluator/: evaluation.py  evaluation_example.py  page_parser.py
src/llms_ocr/: common.py  errors_calculator_chunks.py
src/word_likelihood_evaluator/: evaluation.py  evaluation_example.py
(+1374 files in other folders)
