[project]
name = "llms-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alzbeta Hrabosova", email = "alzbeta.hrabosova@stud-mail.uni-wuerzburg.de" },
    # { name = "", email = "}
    # ...add names
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "evaluate>=0.4.3",
    "numpy>=2.2.5",
    "pagexml-tools>=0.7.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "pytorch_lightning>=2.5.0",
    "colored>=2.3.0",
    "termcolor>=3.1.0",
    "spacy>=3.8.7",
    "pip>=25.1.1",
    "matplotlib>=3.10.3",
    "tabulate>=0.9.0",
    "notebook>=7.4.2",
    "python-levenshtein>=0.27.1",
    "levenshtein>=0.27.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.2",
    "jupyterlab-widgets>=3.0.15",
    "notebook>=7.4.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
